force-app/main/default/objects/Child_products__c/Child_products__c.object-meta.xml
<CustomObject>
    <description>Custom object created to cater for child knowledge articles used within the OneHub digital experience (SFP-5118)</description>
    <label>Child Products</label>
    <nameField>
        <label>Child products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>