force-app/main/default/objects/Child_products__c/fields/Knowledge_Parent__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the parent product in knowledge (SFP-5118)</description>
    <inlineHelpText>Parent knowledge article to child product</inlineHelpText>
    <label>Knowledge Parent</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Child Products</relationshipLabel>
    <relationshipName>APIs1</relationshipName>
    <type>Lookup</type>
</CustomField>