force-app/main/default/objects/Child_products__c/fields/Sign_Up_URL__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_URL__c</fullName>
    <description>URL used for retrieving the swagger document in OneHub (SFP-5118)</description>
    <inlineHelpText>URL for the swagger document relating to the API ID in APIC</inlineHelpText>
    <label>Sign Up URL</label>
    <type>Url</type>
</CustomField>