force-app/main/default/objects/Child_products__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the child product</description>
    <inlineHelpText>Title for the product</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>