force-app/main/default/objects/Child_products__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>OneHub: This field stores the Product ID from the API Portal to generate the swagger. (SFP-5118)</description>
    <inlineHelpText>URL to generate API Detail page with Swagger</inlineHelpText>
    <label>Product ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>